--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -12,6 +12,7 @@
         <file>images/MundoLight.jpeg</file>
         <file>qml/Scrollable.qml</file>
         <file>qml/PCname.qml</file>
+        <file>qml/IconCheckBoxTheme.qml</file>
         <file>qml/InfoItem.qml</file>
         <file>qml/ChangeDialog.qml</file>
         <file>images/sensors-voltage-symbolic.svg</file>
@@ -42,6 +43,8 @@
         <file>images/dark/Logo-computer-400.png</file>
         <file>images/dark_mode.svg</file>
         <file>images/light_mode.svg</file>
+        <file>images/dark_mode.png</file>
+        <file>images/light_mode.png</file>
         <file>images/dock_bottom.svg</file>
         <file>images/dock_left.svg</file>
         <file>qml/IconCheckBox.qml</file>
